[project]
name = "resume_agent"
version = "0.1.0"
description = "resume_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
resume_agent = "resume_agent.main:run"
run_crew = "resume_agent.main:run"
train = "resume_agent.main:train"
replay = "resume_agent.main:replay"
test = "resume_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
